--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
+
+# Build output
 dist
 dist-ssr
 *.local
+
+# Environment variable files
+.env
+.env.* # Excludes all mode-specific env files, e.g., .env.production, .env.development
 
 # Editor directories and files
 .vscode/*
