--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.2",
     "shadcn-landing-page-template": "file:",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
