--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-three/drei": "^9.120.4",
-    "@react-three/fiber": "^8.17.10",
-    "@types/three": "^0.171.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "DMiraki": "file:",
@@ -45,13 +42,11 @@
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2",
     "shadcn-landing-page-template": "file:",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.171.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
